--- a/less/homepage.less
+++ b/less/homepage.less
@@ -659,7 +659,6 @@ body.bHome #contentwrap {
 	float:left;
 	width: 70px;
 	height: 28px;
-	margin-left: 5px;
   }
 
 
@@ -1274,11 +1273,6 @@ body.bHome.bIndex #contentwrap header {
 
 body.bHome.layoutTablet #contentwrap {
   margin: 0 auto;
-
-  header>nav {
-	  padding-left: 20px;
-	  padding-right: 20px;
-  }
 
   section>div.in, #featuredVR>div, #featuredVR>h2, header>nav {
 	  width: 705px;
